add page booking

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!-- Open Graph data -->
     <meta content='Hành trình học tiếng Nhật mỗi ngày của anh thợ code' property='og:description'>
     <meta content='./images/social-media-image.jpeg' property='og:image'>
-    <meta content='en_US' property='og:locale'>
+    <meta content='vi_VN' property='og:locale'>
     <meta content='thocodehoctiengnhat' property='og:site_name'>
     <meta content='A kanji learning application by Hao Truong' property='og:title'>
     <meta content='website' property='og:type'>
-    <meta content='https://haotruong.dev/' property='og:url'>
-    <meta content='https://haotruong.dev' property='og:see_also'>
+    <meta content='https://luyenkanji.com/' property='og:url'>
+    <meta content='https://luyenkanji.com' property='og:see_also'>
 
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="icon" type="image/png" href="./images/icon-196.png" sizes="196x196" />
@@ -44,13 +44,10 @@
               </a>        
             </li>
             <li class="hidden-mobile">
-              <a title="Read what people have to say about Thocodehoctiengnhat." href="#testimonials">Câu chuyện thành công</a>
-            </li>
-            <li class="hidden-mobile">
               <a title="What makes Thocodehoctiengnhat effective?" href="#explanation">Học tốt hơn cùng ...</a>
             </li>
             <li>
-              <a title="Start your kanji learning journey today." target="_blank" href="https://zalo.me/g/tjjxrp039">Tài Liệu</a>
+              <a title="Start your kanji learning journey today." target="_blank" href="https://zalo.me/g/tjjxrp039">Tài Liệu trải nghiệm miễm phí</a>
             </li>
           </ul>
         </div>
@@ -97,7 +94,7 @@
                   tuổi 30 cứ nghĩ là quá muộn, nhưng với học tập thì không bao giờ quá muộn - bắt đầu ngay bây giờ và kiên trì đến cùng!</p>
                 <div class="testimonial-author">
                   <div><span class="testimonial-author-name">Thợ code học tiếng Nhật</span></div>
-                  <div><img src="./images/icons/terminal.svg" alt=""> <span>Developer at FPT Sofware</span></div>
+                  <div class="jobs"><img src="./images/icons/terminal.svg" alt=""> <span>Developer at FPT Sofware</span></div>
                 </div>
               </div>
             </li>
@@ -161,10 +158,10 @@
           tài liệu được phát miễn phí bởi
 
           <div style="margin: 1rem auto;">
-            <a title="thocodehoctiengnhat website" style="border-bottom: none" href="https://www.haotruong.dev/">
+            <a title="thocodehoctiengnhat website" style="border-bottom: none" href="https://www.luyenkanji.com/">
               <img alt="thocodehoctiengnhat logo" src="./images/avt.svg" width="200" /></a></div>
 
-          Copyright &copy; haotruong.dev, <span lang="ja">よ</span>.
+          Copyright &copy; luyenkanji.com, <span lang="vi">よ</span>.
         </div>
       </div>
       </footer>
