--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="apple-touch-icon" type="image/png" href="./images/icon-128.png" sizes="128x128" />
     <link rel="apple-touch-icon-precomposed" type="image/png" href="./images/icon-128.png" sizes="128x128" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/neon.css">
   </head>
 
   <body>
@@ -47,7 +48,7 @@
               <a title="What makes Thocodehoctiengnhat effective?" href="#explanation">Học tốt hơn cùng ...</a>
             </li>
             <li>
-              <a title="Start your kanji learning journey today." target="_blank" href="https://zalo.me/g/tjjxrp039">Tài Liệu trải nghiệm miễm phí</a>
+              <a href="hocthu[thocodehoctiengnhat].pdf" title="Start your kanji learning journey today." target="_blank" onclick="downloadPdf()">Tài Liệu trải nghiệm miễn phí</a>
             </li>
           </ul>
         </div>
@@ -67,12 +68,14 @@
         <div class="twelve columns tagline-wrapper">
           <div>
             <h1>
-              1,500 kanji,<br>
+              COMBO MUA 1 ĐƯỢC 3 <br>
               10 file luyện dẻo tay,<br>
-              Thoải mái học
+              90 bộ thủ cơ bản,<br>
+              650 kanji sơ cấp,<br>
+              Đánh bay nỗi sợ Kanji - Yêu Kanji lại từ đầu
             </h1>
             <ul>
-              <li><a class="button button-primary" href="#explanation">Đọc thêm</a></li>
+              <li><a class="neon" href="/booking.html">Mua ngay</a></li>
             </ul>
           </div>
         </div>
@@ -167,4 +170,17 @@
       </footer>
     </section>
   </body>
+
+  <script>
+    function downloadPdf() {
+      var url = 'hocthu[thocodehoctiengnhat].pdf';
+      var filename = 'hocthu[thocodehoctiengnhat].pdf';
+      var a = document.createElement('a');
+      a.href = url;
+      a.download = filename;
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+    }
+    </script>
 </html>
