--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="google" value="notranslate">
     <!-- Open Graph data -->
+    <meta property="fb:app_id" content="1330163157828284" />
     <meta content='Hành trình học tiếng Nhật mỗi ngày của anh thợ code' property='og:description'>
     <meta content='./images/social-media-image.jpeg' property='og:image'>
     <meta content='vi_VN' property='og:locale'>
     <meta content='thocodehoctiengnhat' property='og:site_name'>
-    <meta content='A kanji learning application by Hao Truong' property='og:title'>
+    <meta content='A kanji learning application by tiktokID @thocodehoctiengnhat' property='og:title'>
     <meta content='website' property='og:type'>
     <meta content='https://luyenkanji.com/' property='og:url'>
     <meta content='https://luyenkanji.com' property='og:see_also'>
