--- a/booking.html
+++ b/booking.html
@@ -19,7 +19,7 @@
   <meta content='./images/social-media-image.jpeg' property='og:image'>
   <meta content='vi_VN' property='og:locale'>
   <meta content='thocodehoctiengnhat' property='og:site_name'>
-  <meta content='A kanji learning application by Tho Code Hoc Tieng Nhat' property='og:title'>
+  <meta content='A kanji learning application by tiktokID @thocodehoctiengnhat' property='og:title'>
   <meta content='website' property='og:type'>
   <meta content='https://luyenkanji.com/' property='og:url'>
   <meta content='https://luyenkanji.com' property='og:see_also'>
