fix PageSpeed Insights

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="thocodehoctiengnhat">
     <meta name="description" content="Hành trình học tiếng Nhật mỗi ngày của anh thợ code">
     <meta name="keywords" content="japanese kanji, japanese language, japanese learning, kanji, radicals, kanji radicals, japanese vocabulary, vocabulary, srs, spaced repetition, mnemonics, memory tricks, web app, vo luyen kanji, but luyen viet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="google" value="notranslate">
@@ -91,14 +91,14 @@
           <ul>
             <li class="testimonial-1 testimonial-section mg-10em">
               <div class="testimonial-avatar-wrapper">
-                <img class="testimonial-avatar" src="./images/avt2.png" />
+                <img  alt="avatar thocodehoctiengnhat" class="testimonial-avatar" src="./images/avt2.png" />
               </div>
               <div class="testimonial-text">
                 <p>Đã từng lỡ hẹn với Nhật Bản rất nhiều lần, nhưng mình chưa bao giờ có ý nghĩ từ bỏ,
                   tuổi 30 cứ nghĩ là quá muộn, nhưng với học tập thì không bao giờ quá muộn - bắt đầu ngay bây giờ và kiên trì đến cùng!</p>
                 <div class="testimonial-author">
                   <div><span class="testimonial-author-name">Thợ code học tiếng Nhật</span></div>
-                  <div class="jobs"><img src="./images/icons/terminal.svg" alt=""> <span>Developer at FPT Sofware</span></div>
+                  <div class="jobs"><img src="./images/icons/terminal.svg" alt="icon jobs thocodehoctiengnhat"> <span>Developer at FPT Sofware</span></div>
                 </div>
               </div>
             </li>
@@ -145,12 +145,12 @@
             <h2>Bạn có muốn học tiếng Nhật cùng mình không? Ở đây có tài liệu miễn phí.</h2>
             <ul>
               <li><a class="button" target="_blank" href="https://zalo.me/g/tjjxrp039">
-                Tham gia nhóm <img src="./images/zalo_icon.png" width="20" alt=""></a></li>
+                Tham gia nhóm <img src="./images/zalo_icon.png" width="20" alt="icon zalo"></a></li>
             </ul>
             <div class="social-media">
               <ul>
                 <li><a href="https://www.tiktok.com/@thocodehoctiengnhat" class="follow-button" data-show-count="false">
-                  <img src="./images/tik-tok.png" alt="">  Follow @thocodehoctiengnhat</a></li>
+                  <img src="./images/tik-tok.png" alt="icon tiktok">  Follow @thocodehoctiengnhat</a></li>
               </ul>
             </div>
           </div>
