--- a/booking.html
+++ b/booking.html
@@ -44,8 +44,15 @@
       <textarea name="entry.1741927713" required name="" id="" cols="30" tabindex="6" rows="10" placeholder="Địa chỉ số nhà, thôn xóm, ..." ></textarea>
       <input id="quantity" required name="entry.1260711618" placeholder="Số lượng vở" tabindex="7" maxlength="255" size="255" type="number" />
       <input required placeholder="Đơn giá: 79,000 vnđ" maxlength="255" size="255" type="text" class="disabled" disabled/>
-      <input required placeholder="Phí ship: 20,000 vnđ" maxlength="255" size="255" type="text" class="disabled" disabled/>
+      <input required placeholder="Phí ship: 20,000 vnđ(free cho đơn từ 200k)" maxlength="255" size="255" type="text" class="disabled" disabled/>
       <input id="total" required name="entry.161677275" placeholder="Thành tiền" maxlength="255" size="255" type="text" class="disabled" disabled/>
+      <div style="width: 100%;">
+        <span>Thanh toán trước giúp mình</span>
+        <p>(Nội dung: Số điện thoại đặt hàng)</p>
+        <p>Momo: 0362839398 - Trương Văn Hảo</p>
+        <p>Vpbank: 154912266</p>
+        <img style="width: 100%;"src="images/qr.jpg" alt="">
+      </div>
       <button type="submit" class="button" tabindex="8">
         Đặt hàng 
       </button>      
@@ -59,7 +66,13 @@
   $('#quantity').on('keyup', function(e){
     e.preventDefault();
 
-    $("#total").val(`tổng tiền: ${($(this).val() * 79000 + 20000).toLocaleString()} vnđ`)
+    if($(this).val() && $(this).val() >= 3) {
+      $("#total").val(`Tổng tiền: ${($(this).val() * 79000 ).toLocaleString()} vnđ (freeship)`)
+    } else if($(this).val() && $(this).val() < 3) {
+      $("#total").val(`Tổng tiền: ${($(this).val() * 79000 + 20000 ).toLocaleString()} vnđ`)
+    } else {
+      $("#total").val(`Thành tiền`)
+    }
   })
 
   $('#booking').on('submit',function(e){
