--- a/booking.html
+++ b/booking.html
@@ -36,6 +36,7 @@
 <section class="checkout booking">
   <div class="wrapper">
     <form id="booking" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeiSpX9lC4zDiYOUfYqke0Mf8sCwgewDwNgvfqq9kYE4VCAjw/formResponse">
+      <p style="font-size: 20px; font-weight: 300; color: #ec505b; background-color: #eeeeee59; border-radius: 4px;">Các bạn đang ở Nhật sẽ được gửi bản mềm </p>
       <input required placeholder="Họ tên" name="entry.1884182194" tabindex="1" maxlength="255" size="255" type="text" />
       <input required placeholder="Số điện thoại" name="entry.1462180605" tabindex="2" maxlength="255" size="255" type="text"  />
       <input required placeholder="Thành Phố/Tỉnh" name="entry.1561782523" tabindex="3" maxlength="255" size="255" type="text" />
