--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>WaniKani — Log in</title>
+    <title>Thợ code học tiếng Nhật</title>
     <link rel="stylesheet" href="css/checkout.css" media="screen" />
     <link rel="stylesheet" href="css/style.css" media="screen" />
     <meta name="application-name" content="Tho code hoc tieng Nhat">
