--- a/booking.html
+++ b/booking.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Đặt sách | luyenkanji.com</title>
+  <title>Đặt sách luyện kanji | luyenkanji.com - @thocodehoctiengnhat</title>
   <link rel="stylesheet" href="css/checkout.css" media="screen" />
   <link rel="stylesheet" href="css/style.css" media="screen" />
   <meta name="application-name" content="Tho code hoc tieng Nhat">
   <meta name="author" content="thocodehoctiengnhat">
   <meta name="description" content="Hành trình học tiếng Nhật mỗi ngày của anh thợ code">
-  <meta name="keywords" content="japanese kanji, japanese language, japanese learning, kanji, radicals, kanji radicals, japanese vocabulary, vocabulary, srs, spaced repetition, mnemonics, memory tricks, web app, vo luyen kanji, but luyen viet">
+  <meta name="keywords" content="japanese kanji, japanese language, japanese learning, kanji, radicals, kanji radicals, japanese vocabulary, vocabulary, srs, spaced repetition, mnemonics, memory tricks, web app, vo luyen kanji, but luyen viet, luyen kanji">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
