--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <title>Thợ code học tiếng Nhật</title>
+    <title>Luyện Kanji | luyenkanji.com - @thocodehoctiengnhat</title>
     <link rel="stylesheet" href="css/main.css" media="screen" />
     <script src="js/script.js"></script>
     <meta name="application-name" content="Tho code hoc tieng Nhat">
     <meta name="author" content="thocodehoctiengnhat">
     <meta name="description" content="Hành trình học tiếng Nhật mỗi ngày của anh thợ code">
-    <meta name="keywords" content="japanese kanji, japanese language, japanese learning, kanji, radicals, kanji radicals, japanese vocabulary, vocabulary, srs, spaced repetition, mnemonics, memory tricks, web app, vo luyen kanji, but luyen viet">
+    <meta name="keywords" content="japanese kanji, japanese language, japanese learning, kanji, radicals, kanji radicals, japanese vocabulary, vocabulary, srs, spaced repetition, mnemonics, memory tricks, web app, vo luyen kanji, but luyen viet, luyen kanji">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
