--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </a>        
             </li>
             <li class="hidden-mobile">
-              <a title="What makes Thocodehoctiengnhat effective?" href="#explanation">Học tốt hơn cùng ...</a>
+              <a title="What makes Thocodehoctiengnhat effective?" href="#explanation">Học tốt với ...</a>
             </li>
             <li>
               <a href="hocthu[thocodehoctiengnhat].pdf" title="Start your kanji learning journey today." target="_blank" onclick="downloadPdf()">Tài Liệu trải nghiệm miễn phí</a>
@@ -120,6 +120,7 @@
               </div></li><li><div class="explanation-item-radicals">
                 <h3>Flashcard</h3>
                 🏷 Chuẩn bị cho mình 1 bộ FlashCard theo chủ đề mình thường xuyên tiếp xúc, để học mỗi ngày.
+                <p><a class="neon-small" href="/flashcard.html">Xem thêm</a></p>
               </div></li><li><div class="explanation-item-kanji">
                 <h3>Hán Tự</h3>
                 📝 Học chắc bộ thủ cơ bản, luyện viết hằng ngày.
