--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 💭 Nghe file ghi âm thật nhiều hơn để ghi nhớ nhiều hơn, đọc kỹ hơn để ghi nhớ lâu hơn.
               </div></li><li><div class="explanation-item-radicals">
                 <h3>Flashcard</h3>
-                🏷 Chuẩn bị cho mình 1 bộ FlashCard theo chủ đề mình thường xuyên tiếp xúc, để học mỗi ngày.
+                🏷 90 bộ thủ cơ bản và 650 kanji sơ cấp cho mọi người học cùng với file luyện viết.
                 <p><a class="neon-small" href="/flashcard.html">Xem thêm</a></p>
               </div></li><li><div class="explanation-item-kanji">
                 <h3>Hán Tự</h3>
