--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a title="What makes Thocodehoctiengnhat effective?" href="#explanation">Học tốt với ...</a>
             </li>
             <li>
-              <a href="hocthu[thocodehoctiengnhat].pdf" title="Start your kanji learning journey today." target="_blank" onclick="downloadPdf()">Tài Liệu trải nghiệm miễn phí</a>
+              <a href="hocthu[thocodehoctiengnhat].pdf" title="Start your kanji learning journey today." target="_blank" onclick="downloadPdf()">Tài Liệu trải nghiệm</a>
             </li>
           </ul>
         </div>
@@ -78,14 +78,13 @@
         <div class="twelve columns tagline-wrapper">
           <div>
             <h1>
-              COMBO MUA 1 ĐƯỢC 3 <br>
               10 file luyện dẻo tay,<br>
               90 bộ thủ cơ bản,<br>
               650 kanji sơ cấp,<br>
               Đánh bay nỗi sợ Kanji - Yêu Kanji lại từ đầu
             </h1>
             <ul>
-              <li><a class="neon" href="/booking.html">Mua ngay</a></li>
+              <li><a class="neon" href="https://www.facebook.com/groups/thocodehoctiengnhat">Tham gia group</a></li>
             </ul>
           </div>
         </div>
@@ -154,8 +153,8 @@
           <div class="twelve columns">
             <h2>Bạn có muốn học tiếng Nhật cùng mình không? Ở đây có tài liệu miễn phí.</h2>
             <ul>
-              <li><a class="button" target="_blank" href="https://zalo.me/g/tjjxrp039">
-                Tham gia nhóm <img src="./images/zalo_icon.png" width="20" alt="icon zalo"></a></li>
+              <li><a class="button" target="_blank" href="https://www.facebook.com/groups/thocodehoctiengnhat">
+                Tham gia nhóm <img src="./images/icons/facebook.svg" width="20" alt="icon zalo"></a></li>
             </ul>
             <div class="social-media">
               <ul>
